--- a/frontend/src/Project.css
+++ b/frontend/src/Project.css
@@ -1,6 +1,5 @@
 .project-header {
   height: 6vh;
-  min-height: 2em;
   display: flex;
   flex-direction: row;
   align-items: center;
